--- a/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
+++ b/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
@@ -407,12 +407,12 @@ class GCDMMIOBlackBox(val w: Int)
   <section>
     <h2>Main Ideas</h2>
     <dl>
-      <dt>Frontends</dt>
-      <dd>Mixed-abstraction, interop semantics, ergonomic external module integration, embedding PD/power/verification collateral, rewrite/spec/compiler generation</dd>
-      <dt>IRs</dt>
-      <dd>Preservation of semantics, graph-oriented representation</dd>
-      <dt>Tools / Simulators</dt>
-      <dd>Low latency iteration cycle (incremental), full spectrum (from specification to PD)</dd>
+      <dt class="fragment">Frontends</dt>
+      <dd class="fragment">Mixed-abstraction, interop semantics, ergonomic external module integration, embedding PD/power/verification collateral, rewrite/spec/compiler generation</dd>
+      <dt class="fragment">IRs</dt>
+      <dd class="fragment">Preservation of semantics, graph-oriented representation</dd>
+      <dt class="fragment">Tools / Simulators</dt>
+      <dd class="fragment">Low latency iteration cycle (incremental), full spectrum (from specification to PD)</dd>
     </dl>
   </section>
 </section>
