--- a/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
+++ b/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
@@ -113,7 +113,7 @@ Reveal.on( 'fragmenthidden', event => {
     <h2 class="fragment">The Next Paradigm of SoC Design</h2>
     <h3>Chipyard Overview + Calyx Integration Demo</h3>
     <h4 style="font-weight:normal;">
-      Joonho Whangbo, Vighnesh Iyer, Bora Nikolic (UC Berkeley)
+      Joonho Whangbo, Vighnesh Iyer, Sophia Shao, Krste Asanović, Bora Nikolić (UC Berkeley)
     </h4>
     <h5 style="font-weight:normal;">
       LATTE 2024
