--- a/talks/themes/tokyonight-base.scss
+++ b/talks/themes/tokyonight-base.scss
@@ -5,9 +5,9 @@
 // ---------------------------------------------
 
 // Include theme-specific fonts
-@import url(/node_modules/@fontsource/fira-sans/latin.css);
-@import url(/node_modules/@fontsource/fira-sans/latin-italic.css);
-@import url(/node_modules/@fontsource/fira-code/latin.css);
+@import url("/node_modules/@fontsource/fira-sans/latin.css");
+@import url("/node_modules/@fontsource/fira-sans/latin-italic.css");
+@import url("/node_modules/@fontsource/fira-code/latin.css");
 
 // Tokyonight colors
 // https://github.com/enkia/tokyo-night-vscode-theme
