--- a/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
+++ b/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
@@ -288,6 +288,22 @@ Reveal.on( 'fragmenthidden', event => {
       <li>How else can we demonstrate the lack of beauty?</li>
     </ul>
   </section>-->
+
+  <section>
+    <h2>Vertical Separation</h2>
+    <div class="container" style="grid-template-columns: 1.4fr 1.0fr;">
+      <div>
+        <img class="fragment" src="./figs/latte24/current-paradigm.svg"/>
+      </div>
+      <div>
+        <ul>
+          <li class="fragment">Each level of the stack is agnostic of other layers</li>
+          <li class="fragment">Long latency</li>
+          <li class="fragment">(Possibly) missing out on QoR</li>
+        </ul>
+      </div>
+    </div>
+  </section>
 </section>
 
 <section>
