--- a/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
+++ b/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
@@ -155,11 +155,11 @@ Reveal.on( 'fragmenthidden', event => {
 
     <ol>
       <li class="fragment"><strong class="red">Slow iteration cycle</strong>: minutes to hours for evaluating a change</li>
-      <li class="fragment"><strong class="red">Loss of semantics</strong>: RTL is the "narrow waist" in the stack</li>
       <li class="fragment"><strong class="red">One abstraction at a time</strong>: Coarse-grained integration of multiple design abstractions limits the productivity benefits of each one</li>
+      <li class="fragment"><strong class="red">Loss of semantics</strong>: RTL is the "narrow waist" in the stack; higher-level semantics are stripped</li>
     </ol>
   </section>
-  
+
   <!--<section>
     <h2>Rapid Iteration Across the Design Flow</h2>
 
@@ -221,7 +221,7 @@ Reveal.on( 'fragmenthidden', event => {
 
       <div class="fragment">
         <dt>HW accelerated RTL simulators</dt>
-        <dd class="small"><strong><a href="https://fires.im/">FireSim</a></strong>, <a href="https://github.com/ManticoreRTL">Manticore</a> (FPGA) | <a href="https://github.com/dian-lun-lin/RTLflow">RTLFlow</a> (GPU) | <a href="https://dl.acm.org/doi/abs/10.1145/3613424.3614257">ASH</a>> (ASIC) | <a href="https://arxiv.org/abs/2403.04714">Parendi</a> (Graphcore IPU)</dd>
+        <dd class="small"><strong><a href="https://fires.im/">FireSim</a></strong>, <a href="https://github.com/ManticoreRTL">Manticore</a> (FPGA) | <a href="https://github.com/dian-lun-lin/RTLflow">RTLFlow</a> (GPU) | <a href="https://dl.acm.org/doi/abs/10.1145/3613424.3614257">ASH</a> (ASIC) | <a href="https://arxiv.org/abs/2403.04714">Parendi</a> (Graphcore IPU)</dd>
       </div>
     </dl>
 
@@ -230,9 +230,9 @@ Reveal.on( 'fragmenthidden', event => {
     <ol>
       <li class="fragment">Higher-level abstractions {{ rightarrow }} lower startup latency and higher throughput</li>
       <li class="fragment">Optimize software RTL simulators {{ rightarrow }} higher throughput
-        <ul class="small"><li>Memory layout, SIMD, multicore, dynamic execution, IR interpreters</li></ul>
+        <ul class="small"><li>Memory layout, SIMD, multicore, step skipping, IR interpreters</li></ul>
       </li>
-      <li class="fragment">Leverage specialized hardware {{ rightarrow }} faster iteration on long workloads</li>
+      <li class="fragment">Leverage specialized hardware {{ rightarrow }} faster evaluation of long workloads</li>
     </ol>
 
     <!--These simulators address iteration speed by either simulating higher level abstractions, optimizing simulation kernels, or using specialized hardware.-->
@@ -240,8 +240,152 @@ Reveal.on( 'fragmenthidden', event => {
   </section>
 
   <section>
+    <div style="position:relative;">
+    <h2>2. <span class="red">One Abstraction at a Time</a></h2>
+    <img class="image no-margin" style="position:absolute; top: 0; right: 0; transform-origin: top right; transform: scale(1); padding: 0.3rem; width: 20%; z-index: 1;" src="./figs/latte24/current-paradigm.svg" />
+
+    <div class="container" style="grid-template-columns: 1fr 1fr;">
+      <div class="fragment"><img src="./figs/latte24/esp_flow.png" /></div>
+      <div class="fragment">
+    <pre><code class="scala" data-trim data-line-numbers>
+class GCDMMIOBlackBox(val w: Int)
+  extends BlackBox(Map("WIDTH" -> IntParam(w)))
+  with HasBlackBoxResource
+  with HasGCDIO
+{
+  addResource("/vsrc/GCDMMIOBlackBox.v")
+}
+    </code></pre>
+      </div>
+    </div>
+
+    <ul>
+      <li class="fragment">We are still far away from realizing true multi-abstraction interop
+        <ul>
+        <li class="fragment">Verilog blackboxing is too coarse-grained and means lowering everything to RTL</li>
+        <li class="fragment">Designers can benefit from fine-grained interop</li>
+        </ul>
+      </li>
+    </ul>
+
+    <dl>
+      <dt class="fragment">Elaboration time interop</dt><dd class="fragment">The practical mechanism (FFI) of invoking sub-generators<span class="reference">[1]</span></dd>
+      <dt class="fragment">Runtime interop</dt><dd class="fragment">Runtime interaction semantics between abstractions</dd>
+    </dl>
+
+    <div class="footnote fragment">
+      [1] Daly, Ross, Lenny Truong, and Pat Hanrahan. "Invoking and linking generators from multiple hardware languages using coreir." WOSET 2018.
+    </div>
+
+    </div>
+  </section>
+
+  <section>
+    <h2 class="no-margin">2. <span class="green">New HDLs and Design Abstractions</span></h2>
+
+    <dl class="smallish">
+      <div class="fragment">
+        <dt>Intermediate representations</dt>
+        <dd class="small">
+        <a href="https://github.com/chipsalliance/firrtl-spec">FIRRTL</a>,
+        <a href="https://github.com/fabianschuiki/llhd">LLHD</a>,
+        <a href="https://circt.llvm.org/docs/Dialects/">Circt</a> <small>(affine, handshake, ssp, pipeline, fsm, dc)</small>,
+        <a href="https://dl.acm.org/doi/pdf/10.1145/3623278.3624767">HIR</a>,
+        <a href="https://github.com/masc-ucsc/livehd/tree/master/lgraph">LGraph</a>/<a href="https://masc.soe.ucsc.edu/docs/woset19b.pdf">LNAST</a>,
+        <a href="https://github.com/YosysHQ/yosys/blob/main/kernel/rtlil.h">Yosys RTLIL</a>,
+        <a href="https://dl.acm.org/doi/abs/10.1145/3453483.3454075">Reticle</a>
+        </dd>
+      </div>
+      <div class="fragment">
+        <dt>RTL-level</dt>
+        <dd class="small">
+        <strong><a href="https://www.chisel-lang.org/">Chisel</a></strong>, <a href="https://github.com/SpinalHDL/SpinalHDL?tab=readme-ov-file">SpinalHDL</a> (Scala) |
+        <a href="https://ieeexplore.ieee.org/document/1420905">Lava</a>, <a href="https://github.com/blarney-lang/blarney">Blarney</a> (Haskell) |
+        <a href="https://github.com/amaranth-lang/amaranth">Amaranth</a>, <a href="https://www.myhdl.org/">MyHDL</a>, <a href="https://github.com/pymtl/pymtl3">PyMTL3</a>, <a href="https://github.com/UCSBarchlab/PyRTL">PyRTL</a>, <a href="https://github.com/phanrahan/magma">Magma</a>, (Python) |
+        <a href="https://github.com/janestreet/hardcaml">HardCaml</a> (OCaml) |
+        <a href="https://intel.github.io/rohd-website/">ROHD</a> (Dart) |
+        <a href="https://github.com/masc-ucsc/pyrope_artifacts">pyrope</a>, <a href="https://github.com/veryl-lang/veryl">Veryl</a> (freestanding)
+        </dd>
+      </div>
+      <div class="fragment">
+        <dt>Dataflow</dt>
+        <dd>
+        <a href="https://spade-lang.org/">Spade</a>,
+        <a href="https://github.com/kaist-cp/shakeflow">Shakeflow</a>,
+        <a href="https://github.com/DFiantHDL/DFiant">DFiant</a>,
+        <a href="https://github.com/JulianKemmerer/PipelineC">PipelineC</a>,
+        <a href="https://www.redwoodeda.com/tl-verilog">TL-Verilog</a>
+        </dd>
+      </div>
+      <div class="fragment">
+        <dt>Control flow synthesis</dt>
+        <dd>
+        <a href="https://calyxir.org/">Calyx</a>,
+        <a href="https://github.com/google/xls">XLS</a>,
+        <a href="https://github.com/B-Lang-org/bsc">Bluespec</a>,
+        <a href="https://github.com/mit-plv/koika">Koika</a>,
+        <a href="https://clash-lang.org/">Clash</a>
+        </dd>
+      </div>
+      <div class="fragment">
+        <dt>Accelerator design languages</dt>
+        <dd>
+        <a href="https://spatial-lang.org/">Spatial</a>,
+        <a href="https://capra.cs.cornell.edu/dahlia/">Dahlia</a>,
+        <a href="https://dl.acm.org/doi/abs/10.1145/3352460.3358292">μIR</a>,
+        <a href="https://github.com/cornell-zhang/heterocl">HeteroCL</a>,
+        <a href="https://arxiv.org/pdf/2404.04815.pdf">Allo</a>
+        </dd>
+      </div>
+      <div class="fragment">
+        <dt>General HLS</dt>
+        <dd>
+        SystemC (<a href="https://eda.sw.siemens.com/en-US/ic/catapult-high-level-synthesis/">Catapult</a>),
+        C++ (<a href="http://lightsail.legupcomputing.com/">LegUp</a>, <a href="https://github.com/Xilinx/HLS">Vitis HLS</a>)
+        </dd>
+      </div>
+    </dl>
+
+    <p class="center small fragment">Stack of Perl and macros in SystemVerilog <span class="green">{{ rightarrow }} new RTL-level DSLs</span></p>
+    <p class="center fragment">Rich ecosystem of design languages enable higher productivity, <strong class="red">but are difficult to compose and integrate.</strong></p>
+  </section>
+
+  <section>
+    <h2>2. <span class="green">New SoC Design Frameworks</span></h2>
+
+    <ul class="fragment">
+      <li><strong><a href="https://github.com/ucb-bar/chipyard">Chipyard</a></strong> (Berkeley)<!--: Chisel-based, cores (Rocket, BOOM, CVA6), accelerators (Gemmini, NVDLA), memory system + NoC--></li>
+      <li><a href="https://www.esp.cs.columbia.edu/">ESP</a> (Columbia)<!--: Tile based SoC architecture, cores (CVA6, Ibex), accelerators (Verilog blackboxing), memory system + NoC--></li>
+      <li><a href="http://parallel.princeton.edu/openpiton/">OpenPiton</a> (Princeton)<!--: Ariane + memory / uncore components--></li>
+      <li><a href="https://github.com/pulp-platform/pulp">PULP</a> (ETH Zurich)<!--: Cores (RISCY, zero-riscy), ???--></li>
+      <li><a href="https://github.com/black-parrot/black-parrot">BlackParrot</a> (UW)<!--: ???--></li>
+      <li><a href="https://github.com/OpenXiangShan/XiangShan">Xiangshan</a> (Chinese Academy of Sciences)<!--: High performance OoO RISC-V core + L2--></li>
+    </ul>
+
+    <!--<div class="center fragment">
+      <img class="image no-margin" src="./figs/dynamic/latte24/soc_construction.svg" />
+      <p><em>Image of Makefile calling other Makefiles and being wrapped in yet another custom build system</em></p>
+    </div>-->
+
+    <!-- web of scripts and build systems, config systems on top of config systems -->
+
+    <!--<ul>
+      <li class="fragment">Composing IP correctly is hard. Satisfying global constraints, verifying every interface conforms, parameter propagation</li>
+      <li class="fragment">SoC construction described in ad-hoc phases with yaml on top of Makefiles on top of Makefiles</li>
+      <li class="fragment">Collateral emission at block and SoC level must understand the configuration of every IP</li>
+    </ul>-->
+
+    <p class="center fragment">Full system evaluation at RTL-level.</p>
+    <p class="center fragment">SoC level parameterization<span class="reference">[1]</span> and integration of external IP.</p>
+
+    <div class="footnote fragment">
+      [1] Cook, Henry, Wesley Terpstra, and Yunsup Lee. "Diplomatic design patterns: A TileLink case study." CARRV 2017.
+    </div>
+  </section>
+
+  <section>
     <div style="position: relative;">
-    <h2>2. <span class="red">Loss of Semantics</span></h2>
+    <h2>3. <span class="red">Loss of Semantics</span></h2>
     <img class="image no-margin" style="position:absolute; top: 0; right: 0; transform-origin: top right; transform: scale(1); padding: 0.3rem; width: 20%; z-index: 1;" src="./figs/latte24/current-paradigm.svg" />
 
     <div class="container" style="grid-template-columns: 1fr 1fr; margin-bottom: 1rem;">
@@ -283,49 +427,12 @@ Reveal.on( 'fragmenthidden', event => {
     </div>
   </section>
 
-  <section>
-    <h2>3. Design Productivity - New HDLs and Design Abstractions</h2>
-    <dl>
-      <dt class="fragment">Intermediate representations</dt>
-      <dd class="fragment small"><a href="https://github.com/chipsalliance/firrtl-spec">FIRRTL</a>, <a href="https://github.com/fabianschuiki/llhd">LLHD</a>, <a href="https://circt.llvm.org/docs/Dialects/">Circt</a> <small>(affine, handshake, ssp, pipeline, fsm, dc)</small>, <a href="https://dl.acm.org/doi/pdf/10.1145/3623278.3624767">HIR</a>, <a href="https://github.com/masc-ucsc/livehd/tree/master/lgraph">LGraph</a>/<a href="https://masc.soe.ucsc.edu/docs/woset19b.pdf">LNAST</a>, <a href="https://github.com/YosysHQ/yosys/blob/main/kernel/rtlil.h">Yosys RTLIL</a>, <a href="https://dl.acm.org/doi/abs/10.1145/3453483.3454075">Reticle</a></dd>
-      <dt class="fragment">RTL-level</dt>
-      <dd class="fragment small"><strong>Chisel</strong>, SpinalHDL (Scala) | Lava, Blarney (Haskell) | Amaranth, MyHDL, PyMTL3, <a href="https://github.com/UCSBarchlab/PyRTL">PyRTL</a>, Magma, (Python) | HardCaml (OCaml) | <a href="https://intel.github.io/rohd-website/">ROHD</a> (Dart) | pyrope, Veryl (freestanding)</dd>
-      <dt class="fragment">Dataflow</dt>
-      <dd class="fragment"><a href="https://spade-lang.org/">Spade</a>, Shakeflow, DFiant, Verilog-TL, PipelineC</dd>
-      <dt class="fragment">Control flow synthesis</dt>
-      <dd class="fragment">Calyx, XLS, Bluespec, <a href="https://github.com/mit-plv/koika">Koika</a>, <a href="https://clash-lang.org/">Clash</a><sup>*</sup></dd>
-      <dt class="fragment">Accelerator design languages</dt>
-      <dd class="fragment">Spatial, Dahlia, <a href="https://dl.acm.org/doi/abs/10.1145/3352460.3358292">μIR</a>, HeteroCL, <a href="https://arxiv.org/pdf/2404.04815.pdf">Allo</a></dd>
-      <dt class="fragment">General HLS</dt>
-      <dd class="fragment">SystemC (Catapult), C++ (<a href="">LegUp</a>, <a href="https://github.com/Xilinx/HLS">Vitis HLS</a>)</dd>
-    </dl>
+  <!--
+    We're not going to mention the impact of the old / new paradigm on team organization (an industry concern that people here won't care about), or on beauty/ergonomics (too hard to explain in words).
+    Also not going to talk about specification synthesis as part of the new paradigm (which includes machine readable specification). This is something we aren't experts on.
+  -->
 
-    <p class="center fragment">Enabling higher hardware design productivity. </p>
-  </section>
-
-
-  <section>
-    <h2>New SoC Design Frameworks</h2>
-    <ul class="fragment">
-      <li><strong><a href="https://github.com/ucb-bar/chipyard">Chipyard</a></strong>: Chisel-based, cores (Rocket, BOOM, CVA6), accelerators (Gemmini, NVDLA), memory system + NoC</li>
-      <li><a href="https://www.esp.cs.columbia.edu/">ESP</a>: Tile based SoC architecture, cores (CVA6, Ibex), accelerators (Verilog blackboxing), memory system + NoC</li>
-      <li><a href="http://parallel.princeton.edu/openpiton/">OpenPiton</a>: Ariane + memory / uncore components</li>
-      <li><a href="https://github.com/pulp-platform/pulp">PULP</a>: Cores (RISCY, zero-riscy), ???</li>
-      <li><a href="https://github.com/black-parrot/black-parrot">BlackParrot</a>: ???</li>
-      <li><a href="https://github.com/OpenXiangShan/XiangShan">Xiangshan</a>: High performance OoO RISC-V core + L2</li>
-    </ul>
-
-    <p class="center fragment">Full system evaluation at RTL-level. SoC level parameterization and integration of external IP.</p>
-  </section>
-</section>
-
-<section>
-  <section class="center">
-    <h1>The Existing Paradigm of Hardware Design</h1>
-    <h2>Seen in Industry</h2>
-  </section>
-
-  <section>
+  <!--<section>
     <h2>People and Organization</h2>
 
     <table class="old_paradigm_table">
@@ -381,13 +488,13 @@ Reveal.on( 'fragmenthidden', event => {
       <li class="fragment">Little interaction between teams</li>
       <li class="fragment">Complex tools and abstractions make transition between functions difficult</li>
     </ul>
-  </section>
+  </section>-->
 
-  <section>
+  <!--<section>
     <h2>Specification</h2>
     <div class="center fragment">
       <img class="image" src="./figs/dynamic/latte24/specification.svg" />
-      <!--<p><em>Insert picture of random excel spreadsheets, AXI spec documents, DDR state machines</em></p>-->
+      <p><em>Insert picture of random excel spreadsheets, AXI spec documents, DDR state machines</em></p>
     </div>
 
     <ul>
@@ -395,26 +502,7 @@ Reveal.on( 'fragmenthidden', event => {
       <li class="fragment">Simulators, models, and verification collateral are handcrafted rather than generated</li>
       <li class="fragment">Translation errors due to undefined behaviors and misinterpretation are common</li>
     </ul>
-  </section>
-
-
-  <section>
-    <h2>SoC Integration / Construction</h2>
-    <div class="center fragment">
-      <img class="image no-margin" src="./figs/dynamic/latte24/soc_construction.svg" />
-      <!--<p><em>Image of Makefile calling other Makefiles and being wrapped in yet another custom build system</em></p>-->
-    </div>
-
-    <!--
-    - web of scripts and build systems, config systems on top of config systems
-    -->
-    <ul>
-      <li class="fragment">Composing IP correctly is hard. Satisfying global constraints, verifying every interface conforms, parameter propagation</li>
-      <li class="fragment">SoC construction described in ad-hoc phases with yaml on top of Makefiles on top of Makefiles</li>
-      <li class="fragment">Collateral emission at block and SoC level must understand the configuration of every IP</li>
-    </ul>
-  </section>
-
+  </section>-->
 
   <!--<section>
     <h2>Beauty / Elegance</h2>
@@ -488,39 +576,6 @@ Reveal.on( 'fragmenthidden', event => {
       <li class="fragment">Higher level abstractions enable productivity across the stack</li>
     </ul>
   </section>
-
-  <section>
-    <h2>Clean Interop of Multiple Abstractions</h2>
-
-    <div class="container" style="grid-template-columns: 1fr 1fr;">
-      <div class="fragment"><img src="./figs/latte24/esp_flow.png" /></div>
-      <div class="fragment">
-    <pre><code class="scala" data-trim data-line-numbers>
-class GCDMMIOBlackBox(val w: Int)
-  extends BlackBox(Map("WIDTH" -> IntParam(w)))
-  with HasBlackBoxResource
-  with HasGCDIO
-{
-  addResource("/vsrc/GCDMMIOBlackBox.v")
-}
-    </code></pre>
-      </div>
-    </div>
-
-    <ul>
-      <li class="fragment">We are still far away from realizing true multi-abstraction interop
-        <ul>
-        <li class="fragment">Blackboxing isn't true interop</li>
-        <li class="fragment">Designers can benefit from fine-grained interop</li>
-        </ul>
-      </li>
-    </ul>
-    <dl>
-      <dt class="fragment">Elaboration time interop</dt><dd class="fragment">The practical mechanism (FFI) of invoking sub-generators</dd>
-      <dt class="fragment">Runtime interop</dt><dd class="fragment">Runtime interaction semantics between abstractions</dd>
-    </dl>
-  </section>
-
 
   <section>
     <h2>Main Ideas</h2>
