some colors lol

--- a/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
+++ b/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
@@ -375,8 +375,8 @@ class GCDMMIOBlackBox(val w: Int)
       <li class="fragment">Collateral emission at block and SoC level must understand the configuration of every IP</li>
     </ul>-->
 
-    <p class="center fragment">Full system evaluation at RTL-level.</p>
-    <p class="center fragment">SoC level parameterization<span class="reference">[1]</span> and integration of external IP.</p>
+    <p class="center fragment">Full system evaluation at <span class="green">RTL-level</span>.</p>
+    <p class="center fragment"><span class="green">SoC level parameterization</span><span class="reference">[1]</span> and <span class="orange">integration of external IP</span>.</p>
 
     <div class="footnote fragment">
       [1] Cook, Henry, Wesley Terpstra, and Yunsup Lee. "Diplomatic design patterns: A TileLink case study." CARRV 2017.
