--- a/talks/themes/tokyonight-base.scss
+++ b/talks/themes/tokyonight-base.scss
@@ -265,6 +265,10 @@ $overlayElementFgColor: 0, 0, 0;
   color: $tn_bg;
 }
 
+.orange {
+  color: $tn_orange;
+}
+
 .bg-orange {
   background: $tn_orange;
 }
@@ -275,6 +279,10 @@ $overlayElementFgColor: 0, 0, 0;
 
 .bg-grey {
   background: $tn_grey;
+}
+
+.yellow {
+  color: $tn_yellow;
 }
 
 .bg-yellow {
