--- a/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
+++ b/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
@@ -1498,6 +1498,7 @@ class GCDMMIOBlackBox(val w: Int)
       <ul>
         <li class="fragment">Composes different abstractions together</li>
         <li class="fragment">Checks if the compositions are valid</li>
+        <li class="fragment">We can defer the execution of the composition semantics to runtime</li>
       </ul>
     </div>
   </section>
